# majority-judgment-tracker

./: .gitignore  Makefile  README.md  batch_figure.py  generate_graph_index.sh  interface_mj.py  load_surveys.py  load_uninomial_surveys.py  main.py  main_test.py  netlify.toml  plots.py  presidentielle_2nd_tour_jm_abstensionistes.csv  presidentielle_2nd_tour_jm_lepen.csv  presidentielle_2nd_tour_jm_macron.csv  presidentielle_2nd_tour_jm_melenchonistes.csv  presidentielle_jm.csv  pyproject.toml  setup.cfg  smp_data.py  standardisation.csv  utils.py
.github/workflows/: release.yml
docs/: contributing.md
figs/: 20210504_0505_elb.html  20210601_0602_elb.html  20210706_0706_elb.html  20210802_0803_elb.html  20210831_0901_elb.html  20211005_1006_elb.html  20211102_1103_elb.html  20211206_1207_elb.html  20211208_1209_ow.html  20220110_0111_elb.html  20220131_0202_elb.html
libs/: majority_judgment.py  majority_judgment_2.py  normalize.py
misc/: enums.py
mjtracker/: batch_figure.py  interface_mj.py  load_surveys.py  main.py  main_2nd_round.py  main_animation.py  plots.py  smp_data.py
mjtracker/libs/: majority_judgment_2.py
mjtracker/misc/: enums.py
trackerapp/: .gitignore  package-lock.json  package.json
trackerapp/data/graphs/: 20210601_0602_elb.json
trackerapp/pages/: index.js
trackerapp/src/: App.js
