[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '^external/'

[tool.poetry]
name = "majority-judgment-tracker"
version = "0.1.0"
description = "A tracker for election polls using majority judgment"
authors = ["Pierre Pulch <mail@mail.com>", "Rémy Poulain <mail@mail.com>", "Samuel Ballé <mail@mail.com>", "Pierre-Louis Guhur <pierrelouisguhur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "~1.4.1"
plotly = "~5.6.0"
seaborn = "~0.11.2"
kaleido = "0.2.1"
typed-argument-parser = "~1.7.2"
