[metadata]
name = mjtracker
version = attr: mjtracker.VERSION
description = Visualization tools for majority judgment
long_description = file: README.nd
keywords = majority-judgment, visualization

[options]
packages = mjtracker
install_requires =
    pandas
    plotly
    seaborn
    kaleido
    typed-argument-parser


[options.packages.find]
exclude =
    *.csv
    *.json

